fix : improved charts readability

--- a/src/styles/Charts.css
+++ b/src/styles/Charts.css
@@ -18,7 +18,7 @@
 .tooltipBarText {
   background: #e60000;
   color: white;
-  font-size: 7px;
+  font-size: 10px;
   font-weight: 500;
   line-height: 24px;
   padding: 4px;
@@ -39,7 +39,7 @@
 
 .tooltipLine span {
   background: white;
-  font-size: 7px;
+  font-size: 10px;
   font-weight: 500;
   line-height: 20px;
   padding: 3px 6px;
